name:                helery
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/helery#readme
license:             BSD3
license-file:        LICENSE
author:              nrskt
maintainer:          norisuke@curama.jp
copyright:           2017 nrskt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nrskt/helery
