name:                example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nrskt/helery#readme
license:             BSD3
license-file:        LICENSE
author:              nrskt
maintainer:          norisuke@curama.jp
copyright:           2017 nrskt
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable example
  main-is:             Sample.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog
  build-depends:       base
                     , aeson
                     , unordered-containers
                     , helery
                     , random
                     , text
  default-language:    Haskell2010
